@@ -23,8 +23,7 @@ import dbus
 import dbus.mainloop.glib
 
 from gi.repository import GObject
-
-VERSION = "0.1"
+from common.base import VERSION
 
 if __name__ == '__main__':
     parser = optparse.OptionParser(prog="youker-assistant-session-daemon",
@@ -40,7 +39,6 @@ if __name__ == '__main__':
 
     #TODO make it exist when timeout
     from sessiondbus.daemon import SessionDaemon
-    print("The sessiondbus server is running..........")
     dbus.mainloop.glib.DBusGMainLoop(set_as_default=True)
     mainloop = GObject.MainLoop()
     SessionDaemon(mainloop)
