@@ -375,7 +375,7 @@ Item {
                 anchors.right: parent.right
                 anchors.rightMargin: 5
                 width: 12
-                y: gridView.visibleArea.yPosition * (scrollbar.height+257)
+                y: gridView.visibleArea.yPosition * (scrollbar.height + 100) //257
 //                height: gridView.visibleArea.heightRatio * scrollbar.height;
                 height: 45
                 radius: 3
@@ -407,7 +407,7 @@ Item {
                     drag.minimumY: 0
                     drag.maximumY: scrollbar.height - button.height
                     onMouseYChanged: {
-                        gridView.contentY = button.y / (scrollbar.height+257) * gridView.contentHeight
+                        gridView.contentY = button.y / (scrollbar.height + 100) * gridView.contentHeight //257
                     }
                 }
             }
