@@ -191,6 +191,7 @@ Rectangle {
                 Common.Button {
                     id: fontBtn
                     hoverimage: "blue4.png"
+                    fontcolor: "#318d11"
                     text: "更换字体"
                     width: 105
                     height: 30
@@ -243,6 +244,7 @@ Rectangle {
                     id: desktopfontBtn
                     hoverimage: "blue4.png"
                     text: "更换字体"
+                    fontcolor: "#318d11"
                     width: 105
                     height: 30
                     onClicked: sessiondispatcher.show_font_dialog("desktopfont");
@@ -294,6 +296,7 @@ Rectangle {
                     id: monofontBtn
                     hoverimage: "blue4.png"
                     text: "更换字体"
+                    fontcolor: "#318d11"
                     width: 105
                     height: 30
                     onClicked: sessiondispatcher.show_font_dialog("monospacefont");
